--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ a{
     display: flex;
     justify-content: space-between;
     padding: 10px;
+    text-align: center;
+    width: 100%;
     border: 1px solid #000000;
     border-radius: 5px;
     background-color: #ffffff;
@@ -61,6 +63,10 @@ a{
 
 .rows-box {
     display: flex;
+    width: 100%;
+    padding: 10px;
+    font-size: medium;
+    text-align: center;
     justify-content: center;
     border: 1px solid #000000;
     border-radius: 5px;
@@ -119,3 +125,94 @@ a{
     margin: 10px;
     padding: 10px;
 }
+
+.rows-box:hover {
+    background-color: #f5f5f5;
+    cursor: pointer;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-content {
+    background: white;
+    padding: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+    width: 90%; /* Adjusts for smaller screens */
+    max-width: 700px; /* Fixed max width */
+    height: 70vh; /* Fixed height relative to viewport */
+    overflow-y: auto; /* Enables vertical scroll */
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
+.data h1 {
+    font-size: 22px;
+    color: #000;
+    text-decoration: underline;
+}
+
+.data h2 {
+    font-size: 18px;
+    color: #333;
+    margin-bottom: -15px;
+}
+
+.data p {
+    font-size: 14px;
+    color: #555;
+}
+
+/* Adjustments for smaller screens */
+@media (max-width: 768px) {
+    .data h1 {
+        font-size: 20px;
+    }
+
+    .data h2 {
+        font-size: 16px;
+        margin-bottom: -10px;
+    }
+
+    .data p {
+        font-size: 12px;
+    }
+}
+
+/* Further adjustments for very small screens */
+@media (max-width: 480px) {
+    .data h1 {
+        font-size: 18px;
+    }
+
+    .data h2 {
+        font-size: 16px;
+        margin-bottom: -6px;
+    }
+
+    .data p {
+        font-size: 14px;
+    }
+}
+
+
+
