--- a/style.css
+++ b/style.css
@@ -53,11 +53,14 @@ a{
     display: flex;
     justify-content: space-between;
     text-align: center;
-    width: 90%;
+    width: 100%;
     border: 1px solid #000000;
     border-radius: 5px;
     background-color: #ffffff;
     margin-bottom: 10px;
+    padding: 10px;
+    font-size: 0.9rem;
+    box-sizing: border-box;
 }
 
 .rows-box {
@@ -77,7 +80,7 @@ a{
     color: #000000;
     width: 80px;
     text-align: left;
-    font-size: 15px;
+    font-size: 0.9rem;
 }
 
 .event-name {
