--- a/style.css
+++ b/style.css
@@ -217,3 +217,14 @@ a{
 
 
 
+
+.responsive {
+    max-width: 90%;
+    height: auto;
+    min-width: 250px;
+    border-radius: 10px;
+    display: block; /* Ensures proper centering */
+    margin: 0 auto; /* Centers the image horizontally */
+}
+
+  
