--- a/style.css
+++ b/style.css
@@ -218,7 +218,19 @@ a{
     }
 }
 
-
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+}
+th, td {
+    border: 2px solid #000;
+    padding: 10px;
+    text-align: left;
+}
+th {
+    background-color: #fff;
+}
 
 
 .responsive {
